@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam classBackgroundColor MODEL_COLOR
Package "Model (focus on Contacted implementation)" <<Rectangle>>{

class Person {
    +getContactedInfoList() : List<ContactedInfo>
    +getContactedInfoListToString() : String
    +getContactedInfoEntry(Index index) : ContactedInfo
    +getContactedInfoListSize() : int
    +getLatestContactedInfoEntry() : getLatestContactedInfoEntry()
    +getContactedDateRange() : Integer
    +isContactedInfoListEmpty() : boolean
}

class ContactedInfo
class AddressBook
class List<ContactedInfo>
class Description
class UniquePersonList
class RecentDate

UniquePersonList --> "~* all" Person
AddressBook *--> "1" UniquePersonList

List --> "*" ContactedInfo
Person *--> "1" List

ContactedInfo *--> "description 1" Description
ContactedInfo *--> "recentDate 1" RecentDate
@enduml